# tlpy

./: .gitignore  Dockerfile  README.md  test_script.py
sample_project/: .gitignore  README.md  pyproject.toml
sample_project/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
sample_project/app/: main.py
sample_project/tests/: test_main.py
